<resources>
    <string name="app_name">hyperwallet.ui</string>
    <string name="title_account_add">Add Account</string>
    <string name="unknown">Unknown</string>

    <string name="title_activity_select_transfer_method">Select Transfer Method</string>
    <!-- SelectTransferMethodActivity -->
    <string name="select_transfer_method_title">@string/title_activity_select_transfer_method
    </string>

    <string name="mobileCountryRegion">Country/Region</string>
    <string name="mobileCurrencyLabel">Currency</string>
    <string name="mobileAddTransferMethodHeader">Add transfer method</string>
    <string name="title_activity_add_transfer_method">Add Transfer Method</string>
    <string name="title_add_bank_account">Bank Account</string>
    <string name="title_add_bank_card">Debit Card</string>

    <string name="error_exact_length_field">The length of this field is exactly %d.</string>
    <string name="error_invalid_expiry_date">%s is invalid.</string>
    <string name="error_min_max_length_field">The minimum length of this field is {0} and maximum
        length is {1}.
    </string>

    <string name="createTransferMethodButtonLabel">Add Transfer Method</string>
    <string name="default_account_label">Default Account</string>
    <string name="default_account_sub_label">Select a default transfer method</string>
    <string name="api_expiry_date_format">MM/YY</string>

    <string name="feeInformation">%s fee</string>
    <string name="processingTimeInformation" translatable="false">\u0020\u2022 %s</string>
    <string name="noFee">No fee</string>

    <string name="emptyStateAddTransferMethod">Add a transfer method to get started.</string>

    <!-- menu title -->
    <string name="menu_transfer_funds">Transfer</string>

    <!--Fee formatter-->
    <string name="fee_flat_formatter">%1$s%2$s</string>
    <string name="fee_percent_no_min_and_max_formatter">%1$s%%</string>
    <string name="fee_percent_only_min_formatter">%1$s%% (Min:%2$s %3$s)</string>
    <string name="fee_percent_only_max_formatter">%1$s%% (Max:%2$s %3$s)</string>
    <string name="fee_percent_formatter">%1$s%% (Min:%2$s %3$s, Max:%2$s %4$s)</string>
    <string name="fee_mix_no_min_and_max_formatter">%1$s%2$s + %3$s%%</string>
    <string name="fee_mix_only_min_formatter">%1$s%2$s + %3$s%% (Min:%1$s %4$s)</string>
    <string name="fee_mix_only_max_formatter">%1$s%2$s + %3$s%% (Max:%1$s %4$s)</string>
    <string name="fee_mix_formatter">%1$s%2$s + %3$s%% (Min:%1$s %4$s, Max:%1$s %5$s)</string>

    <string name="account_holder">ACCOUNT HOLDER INFO</string>
    <string name="account_information">ACCOUNT INFO: %s(%s)</string>
    <string name="address">ADDRESS</string>
    <string name="contact_information">CONTACT INFO</string>
    <string name="identification">IDENTIFICATION</string>
    <string name="intermediary_account">INTERMEDIARY ACCOUNT</string>
    <string name="mobileFeesAndProcessingTime">FEES AND PROCESSING TIME</string>

    <string name="search_hint">Search Hint</string>
    <string name="search_country">Search Country</string>
    <string name="search_currency">Search Currency</string>
    <string name="search_widget">Search</string>

    <string name="select_transfer_method_currency_button_description">Select currency button
    </string>
    <string name="select_transfer_method_country_button_description">Select country button</string>
    <string name="selected_country_item_description">Selected country item</string>
    <string name="selected_currency_item_description">Selected currency item</string>
    <string name="transfer_method_context_button_description">Context menu</string>
    <string name="item_select_description">Selected item</string>

    <string name="error_unmapped_field">Unmapped field, Please contact support.</string>

    <string name="country_placeholder">Canada</string>
    <string name="currency_placeholder">CAD</string>
    <string name="feesAndProcessTimePlaceholder">$20.00 USD fee \u2022 1\-3 Business Days </string>
    <string name="mobileCountryCurrencyLabel">LOCATION AND CURRENCY</string>
    <string name="mobileTransferMethodLabel">TRANSFER METHOD</string>
    <string name="mobileTransferMethodsHeader">Transfer methods</string>

    <string name="prepaidCardManagementInfo" >"Log in using a web browser to manage your card"</string>
</resources>
